--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <script>
-    async function loadGoals() {
-        try {
-            const response = await fetch('goals.json');
-            const data = await response.json();
+    aasync function loadGoals() {
+    try {
+        const response = await fetch('goals.json');
+        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+        const data = await response.json();
 
-            // Update Weekly Goals
-            document.getElementById('weekly-header').textContent = data.weekly.header;
-            const weeklyList = document.getElementById('weekly-content');
-            weeklyList.innerHTML = '';
-            data.weekly.content.forEach(item => {
-                const li = document.createElement('li');
-                li.textContent = item;
-                weeklyList.appendChild(li);
-            });
-
-            // Update Monthly Goals
-            document.getElementById('monthly-header').textContent = data.monthly.header;
-            const monthlyList = document.getElementById('monthly-content');
-            monthlyList.innerHTML = '';
-            data.monthly.content.forEach(item => {
-                const li = document.createElement('li');
-                li.textContent = item;
-                monthlyList.appendChild(li);
-            });
-        } catch (error) {
-            console.error('Failed to load goals:', error);
+        // Update Weekly Goals
+        const weeklyHeader = document.getElementById('weekly-header');
+        const weeklyContent = document.getElementById('weekly-content');
+        if (weeklyHeader && weeklyContent) {
+            weeklyHeader.textContent = data.weekly.header;
+            weeklyContent.innerHTML = data.weekly.content.map(item => `<li>${item}</li>`).join('');
+        } else {
+            console.error('Weekly goals elements are missing in the DOM.');
         }
-    }
 
-    loadGoals();
+        // Update Monthly Goals
+        const monthlyHeader = document.getElementById('monthly-header');
+        const monthlyContent = document.getElementById('monthly-content');
+        if (monthlyHeader && monthlyContent) {
+            monthlyHeader.textContent = data.monthly.header;
+            monthlyContent.innerHTML = data.monthly.content.map(item => `<li>${item}</li>`).join('');
+        } else {
+            console.error('Monthly goals elements are missing in the DOM.');
+        }
+    } catch (error) {
+        console.error('Failed to load goals:', error);
+    }
+}
+
+loadGoals();
+
 </script>
