--- a/index.html
+++ b/index.html
@@ -1,34 +1,110 @@
-<script>
-    aasync function loadGoals() {
-    try {
-        const response = await fetch('goals.json');
-        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
-        const data = await response.json();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Goals Dashboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            width: 800px;
+            height: 480px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        .column {
+            background-color: #f9fafc;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            padding-top: 25%;
+        }
+        .column h2 {
+            margin: 0 0 10px;
+            font-size: 1.5rem;
+            color: #333;
+        }
+        .column ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        .column ul li {
+            margin: 10px 0;
+            font-size: 1rem;
+            color: #555;
+        }
+        .edit-link {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            text-decoration: none;
+            color: #007bff;
+            font-size: 0.9rem;
+        }
+    </style>
+</head>
+<body>
+    <a href="edit.html" class="edit-link">Edit Goals</a>
+    <div class="container">
+        <div class="column" id="weekly-column">
+            <h2 id="weekly-header">Weekly Goals</h2>
+            <ul id="weekly-content"></ul>
+        </div>
+        <div class="column" id="monthly-column">
+            <h2 id="monthly-header">Monthly Goals</h2>
+            <ul id="monthly-content"></ul>
+        </div>
+    </div>
+    <script>
+        // Load goals from goals.json
+        async function loadGoals() {
+            try {
+                const response = await fetch('goals.json');
+                const data = await response.json();
 
-        // Update Weekly Goals
-        const weeklyHeader = document.getElementById('weekly-header');
-        const weeklyContent = document.getElementById('weekly-content');
-        if (weeklyHeader && weeklyContent) {
-            weeklyHeader.textContent = data.weekly.header;
-            weeklyContent.innerHTML = data.weekly.content.map(item => `<li>${item}</li>`).join('');
-        } else {
-            console.error('Weekly goals elements are missing in the DOM.');
+                // Update Weekly Goals
+                document.getElementById('weekly-header').textContent = data.weekly.header;
+                const weeklyList = document.getElementById('weekly-content');
+                weeklyList.innerHTML = '';
+                data.weekly.content.forEach(item => {
+                    const li = document.createElement('li');
+                    li.textContent = item;
+                    weeklyList.appendChild(li);
+                });
+
+                // Update Monthly Goals
+                document.getElementById('monthly-header').textContent = data.monthly.header;
+                const monthlyList = document.getElementById('monthly-content');
+                monthlyList.innerHTML = '';
+                data.monthly.content.forEach(item => {
+                    const li = document.createElement('li');
+                    li.textContent = item;
+                    monthlyList.appendChild(li);
+                });
+            } catch (error) {
+                console.error('Failed to load goals:', error);
+            }
         }
 
-        // Update Monthly Goals
-        const monthlyHeader = document.getElementById('monthly-header');
-        const monthlyContent = document.getElementById('monthly-content');
-        if (monthlyHeader && monthlyContent) {
-            monthlyHeader.textContent = data.monthly.header;
-            monthlyContent.innerHTML = data.monthly.content.map(item => `<li>${item}</li>`).join('');
-        } else {
-            console.error('Monthly goals elements are missing in the DOM.');
-        }
-    } catch (error) {
-        console.error('Failed to load goals:', error);
-    }
-}
-
-loadGoals();
-
-</script>
+        loadGoals();
+    </script>
+</body>
+</html>
