--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
             background-color: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            margin-top: 25%; /* Moves content down the page */
         }
         .column {
             background-color: #f9fafc;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            padding-top: 25%;
         }
         .column h2 {
             margin: 0 0 10px;
